@@ -12,6 +12,8 @@ What's New in Python 3.1 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #5994: the marshal module now has docstrings.
+
 - Issue #5981: Fix three minor inf/nan issues in float.fromhex:
   (1) inf and nan strings with trailing whitespace were incorrectly
   rejected;  (2) parsing of strings representing infinities and nans
